Fix: update side scroll to work on mobile

--- a/src/components/SideScroll/SideScroll.module.scss
+++ b/src/components/SideScroll/SideScroll.module.scss
@@ -4,6 +4,7 @@
   left: 0;
   right: 0;
   will-change: transform;
+  overflow-x: hidden;
 }
 
 .root {
